Fixing thumbnail, still working on flip switch, not showing in sim

--- a/Week3/Bronze/CSS/brstyle.css
+++ b/Week3/Bronze/CSS/brstyle.css
@@ -30,7 +30,7 @@ p {
 	padding-left: 70px;
 }
 
-header{
+header{s
 	color:#FFFFFF;
 }
 
